[project]
name = "roseau-load-flow-tutorials"
version = "0.1.0"
description = "Tutorials for Roseau Load Flow inspired from different software"
authors = [
    { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
    { name = "Benoît Vinot", email = "benoit.vinot@roseautechnologies.com" },
    { name = "Ahmad Zubair" },
]
maintainers = [
    { name = "Benoît Vinot", email = "benoit.vinot@roseautechnologies.com" },
]
license.text = "BSD-3-Clause"
urls.repository = "https://github.com/RoseauTechnologies/Roseau_Load_Flow_Tutorials/"
requires-python = ">=3.10"
dependencies = [
    "roseau-load-flow>=0.12.0",
    "dss-python>=0.15.7",
    "jupyter>=1.0.0",
    "rich>=13.8.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C90", "B", "UP", "I", "RUF100", "TID", "SIM", "PT", "PIE", "N", "C4", "NPY", "T10"]
unfixable = ["B"]
ignore = ["B024", "N818", "UP038"]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-pytest-style.parametrize-values-type = "tuple"
mccabe.max-complexity = 15

[tool.typos.default.extend-words]
# Neutral power
pn = "pn"

# MD format
[tool.mdformat]
wrap = 120
number = true
